--- a/sass/theme/_child_theme_variables.scss
+++ b/sass/theme/_child_theme_variables.scss
@@ -781,6 +781,10 @@ ul.products .yith-wcdp {
     margin:0 auto;
 }
 
+.neptune-courses + .woocommerce ul.products li{
+    margin: 2rem 0 0;
+}
+
 
 /*
 ####################################################
